# hyrise

src/: CMakeLists.txt
src/benchmark/: CMakeLists.txt  encoded_column_benchmark.cpp
src/benchmark/encoded_columns/: benchmark_main.cpp  benchmark_memory_resource.cpp  clear_cache.cpp
src/benchmarklib/benchmark_utilities/: arithmetic_column_generator.cpp  arithmetic_column_generator.hpp
src/jit/: CMakeLists.txt  Embed.cmake  jit_specialization.cpp  jit_variant.cpp
src/jit/demo/: demo.cpp  demo.hpp
src/lib/: CMakeLists.txt  types.cpp  types.hpp
src/lib/logical_query_plan/: abstract_lqp_node.cpp  abstract_lqp_node.hpp  lqp_predicate.cpp  lqp_predicate.hpp  mock_node.cpp
src/lib/operators/: projection.cpp
src/lib/operators/jit_operator/specialization/: ir_repository.cpp  ir_repository.hpp  jit_compiler.cpp  jit_compiler.hpp  module.cpp  module.hpp  runtime_pointer.hpp
src/lib/operators/jit_operator/specialization/utils/: error_utils.hpp  llvm_utils.hpp
src/lib/operators/jit_operator/value/: types.hpp
src/lib/optimizer/: join_graph.cpp  join_graph.hpp  join_graph_builder.cpp  join_graph_builder.hpp
src/lib/optimizer/strategy/join_ordering/: abstract_dp_algorithm.cpp  abstract_dp_algorithm.hpp  dp_ccp.cpp  dp_ccp.hpp  dp_linear.cpp  dp_linear.hpp  dp_size.cpp  dp_size.hpp  dplinear.cpp  dplinear.hpp  enumerate_ccp.cpp  enumerate_ccp.hpp  join_ordering.hpp  join_plan_node.cpp  join_plan_node.hpp
src/lib/storage/column_encoders/: dictionary_encoder.hpp
src/test/: CMakeLists.txt
src/test/optimizer/: join_graph_builder_test.cpp
src/test/optimizer/strategy/: join_detection_rule_test.cpp
